--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "jest",
-		"create-leetcode": "bash ./leetcode/create-problem.sh"
+		"create-leetcode": "bash ./leetcode/.scripts/ts-create.sh"
 	},
 	"repository": {
 		"type": "git",
